# learn-rust-prometheus

./: Cargo.toml  Dockerfile  service.yaml
src/: main.rs
