[package]
name = "learn-rust-prometheus"
version = "0.1.0"
authors = ["andrew webber (personal) <andrewvwebber@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-prom = "0.5.0"
actix-web = "3.1.0"
prometheus = "0.10.0"
